EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==10/20/2009==
WildcardX: Bots can now be a group leader. A character can now make not only a group mixed with both bots and other characters, but also groups with all bots and lead by a bot the character designates. Please see #bot botgroup help for details. The legacy BotRaids logic will be removed from the server code in the next 24/48 hours. This effectivly makes bot raiding the same as before the raid system was created. Much of the existing "#bot group order" commands will also be deprecated soon.
WildcardX: Fix for a bug with #bot botgroup add.
WildcardX: Fix for a bug with bot group leader's record in group_id table not removing any older records.
WildcardX: Fix for a bug that caused a bot group leader to say it is following itself.
WildcardX: Fix for a bug that caused a zone crash when a client ungracefully disconnects from zone but zone still runs and the client had spawned bots.
KLS: Added #globalview
KLS: QGlobals will update instantly for the zone they're in.

==10/19/2009==
WildcardX: Fixed a number of bugs with support bots zoning. Refactored the code and eliminated the botactives table.

<SQL Required for BOTS> 1030_botzoningsupport.sql

==10/18/2009==
WildcardX: Bots can now zone with their bot owners as long as they are in a group. Bots not in a group will camp instead of zone.

<SQL Required For BOTS> 1027_botactives.sql

==10/17/2009==
WildcardX: A character and a bot can now recieve an ldon adventure.

<Required SQL> 1022_botadventuring.sql

==10/15/2009==
AndMetal: Added rule Combat:ProcTargetOnly(true). Allows the change from Rev 606 that limits procs to only the target to be removed. Note: AE procs can still cause stability issues if it is set to false.
AndMetal: Fixed some "no newline at end of file" warnings.
AndMetal: Corrected formatting/typo for some # commands.
AndMetal: Fixed a memory leak in Client::ZonePC().